; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/msm/extr_mdp_ppp.c_load_scale_table.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/msm/extr_mdp_ppp.c_load_scale_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mdp_info = type { i32 }
%struct.mdp_table_entry = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mdp_info*, %struct.mdp_table_entry*, i32)* @load_scale_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_scale_table(%struct.mdp_info* %0, %struct.mdp_table_entry* %1, i32 %2) #0 {
  %4 = alloca %struct.mdp_info*, align 8
  %5 = alloca %struct.mdp_table_entry*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.mdp_info* %0, %struct.mdp_info** %4, align 8
  store %struct.mdp_table_entry* %1, %struct.mdp_table_entry** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %27, %3
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %30

12:                                               ; preds = %8
  %13 = load %struct.mdp_info*, %struct.mdp_info** %4, align 8
  %14 = load %struct.mdp_table_entry*, %struct.mdp_table_entry** %5, align 8
  %15 = load i32, i32* %7, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.mdp_table_entry, %struct.mdp_table_entry* %14, i64 %16
  %18 = getelementptr inbounds %struct.mdp_table_entry, %struct.mdp_table_entry* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.mdp_table_entry*, %struct.mdp_table_entry** %5, align 8
  %21 = load i32, i32* %7, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.mdp_table_entry, %struct.mdp_table_entry* %20, i64 %22
  %24 = getelementptr inbounds %struct.mdp_table_entry, %struct.mdp_table_entry* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @mdp_writel(%struct.mdp_info* %13, i32 %19, i32 %25)
  br label %27

27:                                               ; preds = %12
  %28 = load i32, i32* %7, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %7, align 4
  br label %8

30:                                               ; preds = %8
  ret void
}

declare dso_local i32 @mdp_writel(%struct.mdp_info*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
